--- a/mods/ra/rules/system.yaml
+++ b/mods/ra/rules/system.yaml
@@ -147,10 +147,12 @@ World:
 		Name: fog
 	Country@0:
 		Name: Allies
-		Race: allies
+		UiTheme: allies
+		VoiceTheme: allies
 	Country@1:
 		Name: Soviet
-		Race: soviet
+		UiTheme: soviet
+		VoiceTheme: soviet
 	BibLayer:
 	ResourceLayer:
 	ResourceType@ore:
