--- a/mods/cnc/rules/civilian.yaml
+++ b/mods/cnc/rules/civilian.yaml
@@ -246,4 +246,41 @@ C10:
 	Inherits: ^CivInfantry
 	Selectable:
 		Voice: CivilianFemaleVoice
-	
+
+VICE:
+	AppearsOnRadar:
+	Health:
+		Radius: 3
+		HP: 400
+	Armor:
+		Type: Wood
+	RevealsShroud:
+		Range: 4
+	Mobile:
+		Speed: 5
+		TerrainSpeeds:
+			Clear: 90
+			Rough: 80
+			Road: 100
+			Tiberium: 70
+			BlueTiberium: 70
+			Beach: 80
+	Selectable:
+		Voice: GenericVoice
+	TargetableUnit:
+		TargetTypes: Ground
+	AutoTarget:
+	AttackMove:
+	HiddenUnderFog:
+	GainsExperience:
+	GivesExperience:
+	Valued:
+		Cost: 1000
+	Tooltip:
+		Name: Viceroid
+	AttackFrontal:
+		PrimaryWeapon: Chemspray
+	AttackWander:
+	RenderUnit:
+		Smokes: False
+	WithMuzzleFlash:
